Bug 7371 - 2.6.19-rc2 link error : undefined reference to `sys_epoll_pwait'
Summary: 2.6.19-rc2 link error : undefined reference to `sys_epoll_pwait'
Status: CLOSED CODE_FIX
Alias: None
Product: Networking
Classification: Unclassified
Component: Other (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Arnaldo Carvalho de Melo
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-10-16 01:34 UTC by Ben Castricum
Modified: 2006-10-16 14:01 UTC (History)
2 users (show)

See Also:
Kernel Version: 2.6.19-rc2
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
my full .config (37.17 KB, text/plain)
2006-10-16 01:49 UTC, Ben Castricum
Details
add contional sys_epoll_pwait (605 bytes, text/x-patch)
2006-10-16 08:46 UTC, Randy Dunlap
Details

Description Ben Castricum 2006-10-16 01:34:14 UTC
2.6.19-rc1 compiled fine.

From my .config:
# CONFIG_EPOLL is not set
Comment 1 Ben Castricum 2006-10-16 01:49:00 UTC
Created attachment 9251 [details]
my full .config
Comment 2 Randy Dunlap 2006-10-16 08:46:13 UTC
Created attachment 9264 [details]
add contional sys_epoll_pwait
Comment 3 Adrian Bunk 2006-10-16 14:01:22 UTC
Randys patch is now included in Linus' tree.

Note You need to log in before you can comment on or make changes to this bug.